tests/NormalTests/paczka1/small_fuzzy/97569782.err
Error in line 2: fOylrnAB S239 61,4
Error in line 15: A158 A158 67,9
